--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.1.96",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vue3-icon": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
